# getmacrede

./: .gitignore  CHANGELOG.md  COLOR_GUIDE.md  Cargo.toml  README.md  README_NOVAS_FUNCIONALIDADES.md  blacklist.json  devices.json  devices.json.backup  install_rust.sh  kill_processes.sh  mac_mapping.json.example  rust_out
src/: main.rs  models.rs  monitor.rs  proxmox.rs  scanner.rs  storage.rs  utils.rs  vendor.rs
