[package]
name = "getmacrede"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = { version = "0.4.42", features = ["serde"] }
clap = { version = "4.5.53", features = ["derive"] }
ipnetwork = "0.21.1"
notify-rust = "4.11.7"
pnet = "0.35.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
