[package]
name = "getmacrede"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = { version = "0.4.42", features = ["serde"] }
clap = { version = "4.5.53", features = ["derive"] }
colored = "3.0.0"
dns-lookup = "3.0.1"
notify-rust = "4.11.7"
pnet = "0.35.0"
serde = "1.0.228"
serde_json = "1.0.145"
tokio = { version = "1.48.0", features = ["full"] }
